# services/catalog-service/src/main/java/com/hmall/catalog/api/dto/SkuDto.java
@@ -10,5 +10,6 @@ public record SkuDto(
     Long spuId,
     Long priceCents,
     String displayName,
+    String spuName,
     List<SkuSpecValueDto> specValues
 ) {}
